@@ -25,6 +25,7 @@ Changes:
   Supported minimum spec except LiveCD is 512MB memory + 512MB swap device or partition.
   1024MB swap device or partition is recommended.
   File based swap and ZFS volume swap is not recommended.
+- Add hostapd support. (wireless AP mode)
 - Add WLAN virtual interface used for wireless device. (OPT only at this time)
 - Add WebGUI access restriction.
 - Add NFS support in HAST service.
